--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,5 @@
 version: "3.7"
 
-networks:
-  backend:
-    external: true
-
-volumes:
-  oracle_libpms:
-    external: true
-
 services:
   ff-dev:
     build:
@@ -22,15 +14,9 @@ services:
         max-file: "5"
         max-size: 10m
     volumes:
-      - ${VOL_DIR}/flaskfarm/data-dev:/data
-      - oracle_libpms:/usr/lib/plexmediaserver
-      - ${VOL_DIR}/plex/config/Library:/plex/Library
-      - ${VOL_CLOUD}/sjva:${VOL_CLOUD}/sjva:rshared
-      - ${VOL_CLOUD}/driven:${VOL_CLOUD}/driven:rshared
-      - ${VOL_CLOUD}/pikpak:${VOL_CLOUD}/pikpak:rshared
+      - /${YOUR_FOLDER}/data-dev:/data
     environment:
-      PUID: ${PUID}
-      PGID: ${PGID}
+      PUID: ${YOUR_PUID}
+      PGID: ${YOUR_PGID}
       TZ: Asia/Seoul
-    networks: [backend]
     ports: [9999:9999]
