--- a/root/etc/flaskfarm/config.json
+++ b/root/etc/flaskfarm/config.json
@@ -1,3 +1,49 @@
 {
-    "dev": false
+    "FF_DEV": false,
+    "FF_REPO": "https://github.com/flaskfarm/flaskfarm",
+    "FF_SRC": "/data/src",
+    "FF_VENV": "/data/venv",
+    "FF_CONFIG": "/data/config.yaml",
+    "FF_RUNNING_TYPE": "docker",
+    "FF_REQUIREMENTS_APT": [
+        "python3.10",
+        "python3-pip",
+        "virtualenv",
+        "redis-server",
+        "git",
+        "net-tools",
+        "ffmpeg",
+        "fuse3",
+        "aria2",
+        "unzip",
+        "mkvtoolnix"
+    ],
+    "FF_REQUIREMENTS_PIP": [
+        "APScheduler",
+        "celery",
+        "discord-webhook",
+        "Flask<=2.2.2",
+        "Flask-Cors",
+        "Flask-Dropzone",
+        "Flask-Login",
+        "Flask-SocketIO",
+        "Flask-SQLAlchemy",
+        "gevent",
+        "gevent-websocket",
+        "Jinja2",
+        "json_fix",
+        "lxml",
+        "psutil",
+        "python-socketio<5.8.0",
+        "pycryptodome",
+        "pycryptodomex",
+        "pytz",
+        "pyyaml",
+        "redis",
+        "requests",
+        "SQLAlchemy",
+        "telepot-mod",
+        "Werkzeug<3.0",
+        "xmltodict"
+    ]
 }
